--- a/www/index.html
+++ b/www/index.html
@@ -81,6 +81,17 @@
       })
     }
     function countData() {
+      UTdata.count().fetchAll()
+      .then(function(results){
+        $("#display").removeClass();
+        $("#display").addClass("bg-success");
+        $("#display").html(results.count);
+      })
+      .catch(function(error){
+        $("#display").removeClass();
+        $("#display").addClass("bg-warning");
+        $("#display").html("update fail:" + JSON.stringify(error))
+      })
     }
     function sortData() {
     }
@@ -95,7 +106,7 @@
   <div>
     <a onclick="fetchAll()" class="btn btn-outline-secondary" role="buton">Fetch All</a>
     <a onclick="deleteData()" class="btn btn-outline-secondary" role="buton">Delete</a>
-    <a onclick="countData()" class="btn btn-outline-primary" role="button">Count</a>
+    <a onclick="countData()" class="btn btn-outline-secondary" role="button">Count</a>
     <a onclick="sortData()" class="btn btn-outline-primary" role="button">Sort</a>
   </div>
   <div>
